--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style type="text/css"><!--
     * {box-sizing: border-box;}
     main {margin-left: auto; margin-right:auto; max-width: 800px; font-family: Helvetica;}
-    h1, h2 {text-align: center;}
+    h1, h2 {text-align: center; background-color: #eee;}
     
     --></style>
 </head>
