--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <style type="text/css"><!--
     * {box-sizing: border-box;}
-    html, body {background-color: #aaa}
-    main {margin-left: auto; margin-right:auto; max-width: 800px; font-family: Helvetica; background-color:#fff;}
+    html, body {background-color: #ccc}
+    main {margin-left: auto; margin-right:auto; max-width: 1000px; font-family: Helvetica; background-color:#fff;}
     h1, h2 {text-align: center; background-color: #eee;}
     
     --></style>
